fix overflow bug on index.html

--- a/style.css
+++ b/style.css
@@ -105,10 +105,10 @@ figcaption{
 }
 
 #homeContentText{
-    position: absolute;
+    /* position: absolute;
     top: 50%;
-    /* margin: auto auto; */
-    transform: translateY(-50%);
+
+    transform: translateY(-50%); */
     font-size: 1.3em;
 
 }
